--- a/main.css
+++ b/main.css
@@ -1,15 +1,62 @@
-(4) ["b", "c", " ", "b"]
-(4) [" ", "                     ", "r", "y"]
-VM175 pen.js:51 0 2
-VM175 pen.js:43 1 0
-testGuess @ VM175 pen.js:43
-(anonymous) @ VM175 pen.js:8
-console_runner-1df7d3399bdc1f40995a35209755dcfd8c7547da127f6469fd81e5fba982f6af.js:1 (4) ["w", "r", "y", "g"]
-console_runner-1df7d3399bdc1f40995a35209755dcfd8c7547da127f6469fd81e5fba982f6af.js:1 (4) ["r", "g", "r", "g"]
-pen.js:51 0 1
-testGuess @ pen.js:51
-(anonymous) @ pen.js:8
-pen.js:51 1 3
-testGuess @ pen.js:51
-(anonymous) @ pen.js:8
-console_runner-1df7d3399bdc1f40995a35209755dcfd8c7547da127f6469fd81e5fba982f6af.js:1 (2) ["w", "w"]
+html {
+    background-color: rgb(0, 0, 0);
+}
+div{
+    border: 2px solid black;
+    background-color: rgb(47, 70, 45);
+    padding: 10px;
+    border-radius: 25px;
+    width: 60%;
+    margin-right: 20%;
+    margin-left: 20%;
+}
+
+.red {}
+.green {}
+.cyan {}
+.yellow {}
+.black {}
+.white {}
+
+p {
+    border-radius: 5px;
+    font-size: 25px;
+    background-color: rgb(212, 239, 223  );
+    padding:2px; /*Uses CSS box model*/
+    margin-top: 29px;
+    margin-bottom: 20px;
+    margin-right: 14px;
+    margin-left: 14px;
+    width: 95%;
+    height: 60%;
+}
+
+ol#colors {
+	color:white;
+}
+
+select {
+    width: 95%;
+    font-size: 25px;
+    background-color: rgb(212, 239, 223  );
+    padding-top: 0px;
+    margin-top: 2px;
+    margin-bottom: 9px;
+    margin-right: 19px;
+    margin-left: 19px;
+}
+
+select:hover {
+	color:white;
+}
+
+button {
+    width: 95%;
+    height: 90px;
+    font-size: 25px;
+    background-color: rgb(212, 239, 223  );
+    margin-top: 2px;
+    margin-bottom: 9px;
+    margin-right: 19px;
+    margin-left: 19px;
+}
